--- a/.gitignore
+++ b/.gitignore
@@ -4,10 +4,12 @@ dist/
 build/
 
 # Environment variables
+.env
 .env.local
 .env.development.local
 .env.test.local
 .env.production.local
+.env.production
 
 # IDE files
 .vscode/
